--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,14 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": [
-    "next/core-web-vitals",
     "next",
-    "next/typescript",
-    "plugin:prettier/recommended"
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["prettier"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "prettier/prettier": "error"
-  },
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true
+    "react/no-unescaped-entities": "off",
+    "jsx-a11y/alt-text": "off",
+    "@next/next/no-img-element": "off"
   }
 }
